Initial work data module and start nnunet module by nvidia

--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -3,7 +3,7 @@
 # specify here default training configuration
 defaults:
   - _self_
-  - datamodule: mnist.yaml
+  - datamodule: wsi.yaml
   - model: mnist.yaml
   - callbacks: default.yaml
   - logger: null # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
