--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ hydra-core>=1.1.0
 hydra-colorlog>=1.1.0
 hydra-optuna-sweeper>=1.1.0
 
+# --------- dataloading ---- #
+wholeslidedata>=0.0.13
+
 # --------- loggers --------- #
 # wandb
 # neptune-client
@@ -24,8 +27,14 @@ flake8          # code analysis
 nbstripout      # remove output from jupyter notebooks
 
 # --------- others --------- #
-python-dotenv   # loading env variables from .env file
-rich            # beautiful text formatting in terminal
-pytest          # tests
-sh              # for running bash commands in some tests
+python-dotenv>=0.20.0
+rich>=12.4.1
+pytest>=7.1.2
+sh>=1.14.2
 pudb            # debugger
+omegaconf>=2.1.2
+numpy>=1.22.3
+monai>=0.8.1
+scipy>=1.8.0
+scikit-image>=0.19.2
+packaging>=21.3
