--- a/configs/model/nnunet.yaml
+++ b/configs/model/nnunet.yaml
@@ -1,11 +1,21 @@
 _target_: src.models.nnunet_module.NNUnetModule
-lr: 0.001
-weight_decay: 0.0005
 
-net:
-  _target_: src.models.components.simple_dense_net.SimpleDenseNet
-  input_size: 784
-  lin1_size: 256
-  lin2_size: 256
-  lin3_size: 256
-  output_size: 10
+exec_mode:
+
+learning_rate: 0.001
+weight_decay: 0.0005
+momentum: 0.99
+
+spacings: [ 0.5, 0.5 ] # TODO: Should be set only once and used in both datamodule and model module.
+patch_size: [ 64, 64 ] # TODO: Should be set only once and used in both datamodule and model module.
+in_channels: 3   # TODO: Should be set only once and used in both datamodule and model module.
+num_classes: ${datamodule.num_classes}
+steps: ${datamodule.steps_per_epoch}
+
+depth: 2
+deep_supervision: False
+deep_supr_num: 1
+use_tta: True
+use_res_block: False
+optimizer: sgd
+use_focal_loss: False
