--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,7 +4,7 @@
 defaults:
   - _self_
   - datamodule: wsi.yaml
-  - model: mnist.yaml
+  - model: nnunet.yaml
   - callbacks: default.yaml
   - logger: null # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: default.yaml
