--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,7 @@ monai>=0.8.1
 scipy>=1.8.0
 scikit-image>=0.19.2
 packaging>=21.3
+PyYAML>=6.0
+gdown>=4.4.0
+matplotlib>=3.5.2
+setuptools==59.5.0
