--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -40,14 +40,14 @@ data_dir: ${original_work_dir}/data/
 print_config: True
 
 # disable python warnings if they annoy you
-ignore_warnings: True
+ignore_warnings: False
 
 # set False to skip model training
 train: True
 
 # evaluate on test set, using best model weights achieved during training
 # lightning chooses best weights based on the metric specified in checkpoint callback
-test: True
+test: False
 
 # seed for random number generators in pytorch, numpy and python.random
 seed: null
