--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ torchmetrics>=0.7.0
 hydra-core>=1.1.0
 hydra-colorlog>=1.1.0
 hydra-optuna-sweeper>=1.1.0
+omegaconf>=2.1.2
 
 # --------- dataloading ---- #
 wholeslidedata>=0.0.13
+albumentations>=1.1.0
 
 # --------- loggers --------- #
 # wandb
@@ -32,7 +34,6 @@ rich>=12.4.1
 pytest>=7.1.2
 sh>=1.14.2
 pudb            # debugger
-omegaconf>=2.1.2
 numpy>=1.22.3
 monai>=0.8.1
 scipy>=1.8.0
@@ -41,4 +42,4 @@ packaging>=21.3
 PyYAML>=6.0
 gdown>=4.4.0
 matplotlib>=3.5.2
-setuptools==59.5.0
+setuptools==59.5.0  # bug fix
