--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -20,3 +20,7 @@ model_summary:
   _target_: pytorch_lightning.callbacks.RichModelSummary
   max_depth: -1
 
+lr_monitor:
+  _target_: pytorch_lightning.callbacks.LearningRateMonitor
+  logging_interval: step
+  log_momentum: true
